--- a/labs/lab02-review.ipynb
+++ b/labs/lab02-review.ipynb
@@ -32,7 +32,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Hamilton-at-CapU/comp215/blob/main/labs/lab02-review.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Juntolli/comp215/blob/main/labs/lab02-review.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -40,8 +40,8 @@
       "source": [
         "COMP 215 - LAB 2\n",
         "----------------\n",
-        "#### Name(s):\n",
-        "#### Date:\n",
+        "#### Name(s): Bruno Juntolli\n",
+        "#### Date: Jan 15, 2025\n",
         "\n",
         "By the end of this lab you should be able to:\n",
         "  * use strings, tuples, lists, and dictionaries (review)\n",
@@ -73,7 +73,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [],
       "source": [
         "import datetime, json, requests\n",
@@ -107,14 +107,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2025-01-15 <class 'datetime.date'>\n",
-            "Today is: 2025-01-15\n"
+            "2025-01-16 <class 'datetime.date'>\n",
+            "Today is: 2025-01-16\n"
           ]
         }
       ],
@@ -136,7 +136,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FIqwOe5SmxBA",
-        "outputId": "1018f19a-45c4-4c89-e305-aae000871624"
+        "outputId": "02dcce9f-eb1e-497f-aea4-48f997b89f80"
       }
     },
     {
@@ -156,7 +156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,7 +225,7 @@
           "start_time": "2024-01-04T04:05:38.691252Z"
         },
         "id": "vZYx2VfXmxBB",
-        "outputId": "d03eb273-9ec3-4918-91f7-04623455e2d3",
+        "outputId": "ff88dcb6-0123-468d-8386-9994d6741b47",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -246,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "id": "JDGbYTySU3BP",
         "ExecuteTime": {
@@ -256,7 +256,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "78f7b78f-f151-46a5-d830-449b8e75abcb"
+        "outputId": "2dd84c59-7a38-4af9-b414-f745b42a7726"
       },
       "outputs": [
         {
@@ -292,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -1798,7 +1798,7 @@
           "start_time": "2024-01-04T04:05:43.067936Z"
         },
         "id": "NVRl3l7EmxBC",
-        "outputId": "22a202cf-2b54-4064-9449-7161d428e458",
+        "outputId": "1b4a4559-176f-4219-8767-7780b78d25b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1822,10 +1822,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "outputs": [],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3 potentially hazardous asteroids identified.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Ex. 1 your code here"
+        "hazards = [item for item in neos if item['is_potentially_hazardous_asteroid']]\n",
+        "print(f'{len(hazards)} potentially hazardous asteroids identified.')"
       ],
       "metadata": {
         "pycharm": {
@@ -1835,7 +1844,11 @@
           "end_time": "2024-01-04T04:05:43.069849Z",
           "start_time": "2024-01-04T04:05:43.065922Z"
         },
-        "id": "ewkwkc8wmxBB"
+        "id": "ewkwkc8wmxBB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6b6737b8-c009-4f55-87a7-a82c6639daf2"
       }
     },
     {
@@ -1862,17 +1875,70 @@
     {
       "cell_type": "code",
       "source": [
-        "# Ex. 2 your code here"
+        "close_approach_data = []\n",
+        "for date in data['near_earth_objects'].values():\n",
+        "  for object in date:\n",
+        "    for item in object['close_approach_data']:\n",
+        "      close_approach_data.append(item)\n",
+        "\n",
+        "#pprint(close_approach_data)\n",
+        "\n",
+        "def get_closest_approach(close_approach_data):\n",
+        "\n",
+        "  event_date = None\n",
+        "  closest_distance = float('inf')\n",
+        "\n",
+        "  for item in close_approach_data:\n",
+        "    if item.get('orbiting_body') == 'Earth':\n",
+        "      distance = float(item['miss_distance']['kilometers'])\n",
+        "      if distance < closest_distance:\n",
+        "        closest_distance = distance\n",
+        "        event_date = item['close_approach_date']\n",
+        "\n",
+        "  if event_date == None:\n",
+        "    return (None,None)\n",
+        "  else:\n",
+        "    return (event_date,closest_distance)\n",
+        "\n",
+        "print(get_closest_approach(close_approach_data))\n",
+        "\n",
+        "#Unit test\n",
+        "def test_get_closest_approach():\n",
+        "  test_data = [\n",
+        "      {'close_approach_date': '1997-01-01', 'orbiting_body':'Earth','miss_distance':{'kilometers':'1000.0'}},\n",
+        "      {'close_approach_date': '1998-01-01', 'orbiting_body':'Moon','miss_distance':{'kilometers':'200.0'}},\n",
+        "      {'close_approach_date': '1999-01-01', 'orbiting_body':'Sun','miss_distance':{'kilometers':'500.0'}},\n",
+        "      {'close_approach_date': '2000-01-01', 'orbiting_body':'Earth','miss_distance':{'kilometers':'1001.0'}},\n",
+        "      {'close_approach_date': '2001-01-01', 'orbiting_body':'Earth','miss_distance':{'kilometers':'1000.1'}},\n",
+        "      ]\n",
+        "\n",
+        "  correct_option = ('1997-01-01',1000.0)\n",
+        "  result = get_closest_approach(test_data)\n",
+        "  assert result == correct_option, f'result = {result}'\n",
+        "\n",
+        "test_get_closest_approach()"
       ],
       "metadata": {
         "id": "tiyXTDfnZAd0",
         "ExecuteTime": {
           "end_time": "2024-01-04T04:05:43.790535Z",
           "start_time": "2024-01-04T04:05:43.787064Z"
-        }
+        },
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "59140ed1-8b3a-4c53-fc19-b17e85a4d757"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('2025-01-11', 228199.88205114)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1898,7 +1964,64 @@
     {
       "cell_type": "code",
       "source": [
-        "# Ex. 3 (challenge) your code here"
+        "#Dates\n",
+        "end_date = datetime.date.today()\n",
+        "start_date = end_date - datetime.timedelta(days=6)\n",
+        "\n",
+        "# 1. fetches the list of NEO's for this week.\n",
+        "\n",
+        "today = datetime.date.today()\n",
+        "url = f'https://api.nasa.gov/neo/rest/v1/feed?start_date={start_date}&end_date{end_date}&api_key={API_KEY}'\n",
+        "response = requests.request(\"GET\", url, headers={}, data={})\n",
+        "data = json.loads(response.text)\n",
+        "\n",
+        "\n",
+        "# 2. for each NEO, fetch it's complete orbital data and determine its closest approach to Earth\n",
+        "\n",
+        "#List of dictionaries, and each dictionary is an individual near earth object\n",
+        "neo_data = [obj for date in data['near_earth_objects'].values() for obj in date]\n",
+        "\n",
+        "#Dictionary of neo_id and distance from earth: 'key' is the near earth object id and the 'value' is its distance from earth\n",
+        "neo_id_and_distance = {}\n",
+        "\n",
+        "for item in neo_data:\n",
+        "  neo_id = item['id']\n",
+        "  for approach in item['close_approach_data']:\n",
+        "    miss_distance = float(approach['miss_distance']['kilometers'])\n",
+        "    neo_id_and_distance[neo_id] = miss_distance\n",
+        "\n",
+        "\n",
+        "# 3. identify which NEO from this week's data makes the closet approach to earth\n",
+        "\n",
+        "closest_distance = float('inf')\n",
+        "closest_neo_id = None\n",
+        "\n",
+        "for value in neo_id_and_distance.values():\n",
+        "  if value < closest_distance:\n",
+        "        closest_distance = value\n",
+        "\n",
+        "\n",
+        "\n",
+        "for k,v in neo_id_and_distance.items():\n",
+        "  if v == closest_distance:\n",
+        "    closest_neo_id = k\n",
+        "\n",
+        "# 4. print a nice message with information about the NEO, which it will approach the Earth, and how close it will come.\n",
+        "\n",
+        "closest_neo_info = next(item for item in neo_data if item['id'] == closest_neo_id)\n",
+        "\n",
+        "#pprint(closest_neo_info)\n",
+        "\n",
+        "NEO_message = f\"\"\"\n",
+        "Computed all the NEOs (Near Earth Object) of the past 7 days.\n",
+        "The Neo named {closest_neo_info['name']} id: {closest_neo_id} was the one closest to the earth.\n",
+        "It approached the earth at a distance of {closest_distance:,.0f} km on {closest_neo_info['close_approach_data'][0]['close_approach_date']}\n",
+        "\n",
+        "To learn more about about this object, and see its orbit, click this link: {closest_neo_info['nasa_jpl_url']}\n",
+        "\n",
+        "\"\"\"\n",
+        "\n",
+        "print(NEO_message)"
       ],
       "metadata": {
         "id": "Ds1YevErlzCe",
@@ -1908,10 +2031,29 @@
         "ExecuteTime": {
           "end_time": "2024-01-04T04:05:43.790766Z",
           "start_time": "2024-01-04T04:05:43.789211Z"
-        }
+        },
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "75b07ec9-b6f9-4b18-cabc-5adfd249922f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Computed all the NEOs (Near Earth Object) of the past 7 days.\n",
+            "The Neo named (2025 AZ3) id: 54516006 was the one closest to the earth.\n",
+            "It approached the earth at a distance of 228,200 km on 2025-01-11\n",
+            "\n",
+            "To learn more about about this object, and see its orbit, click this link: https://ssd.jpl.nasa.gov/tools/sbdb_lookup.html#/?sstr=54516006\n",
+            "\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ]
 }
