--- a/labs/lab04-more_classes.ipynb
+++ b/labs/lab04-more_classes.ipynb
@@ -650,16 +650,16 @@
         "\n",
         "  @classmethod\n",
         "  def from_neos(cls, neo, data):\n",
+        "    approach_date = datetime.datetime.strptime(data['close_approach_date_full'], \"%Y-%b-%d %H:%M\")\n",
+        "    miss_distance = float(data['miss_distance']['kilometers'])\n",
+        "    relative_velocity = float(data['relative_velocity']['kilometers_per_hour'])\n",
         "\n",
-        "          approach_date = datetime.datetime.strptime(data['close_approach_date_full'], \"%Y-%b-%d %H:%M\")\n",
-        "          miss_distance = float(data['miss_distance']['kilometers'])\n",
-        "          relative_velocity = float(data['relative_velocity']['kilometers_per_hour'])\n",
-        "\n",
-        "          return cls(\n",
-        "              neo, data['orbiting_body'],\n",
-        "              approach_date, miss_distance,\n",
-        "              relative_velocity\n",
-        "              )\n",
+        "    return cls(\n",
+        "        neo,\n",
+        "        data['orbiting_body'],\n",
+        "        approach_date, miss_distance,\n",
+        "        relative_velocity\n",
+        "        )\n",
         "\n",
         "\n",
         "close_approaches = [CloseApproach.from_neos(neo, approach) for neo in neos for approach in neo.get('close_approach_data', [])]\n",
@@ -672,7 +672,7 @@
           "start_time": "2024-01-04T04:11:12.895465Z"
         }
       },
-      "execution_count": 134,
+      "execution_count": 136,
       "outputs": []
     },
     {
@@ -726,7 +726,11 @@
         "  @classmethod\n",
         "  def from_NEO(cls,neo_data):\n",
         "    close_approaches = [CloseApproach.from_neos(neo_data, approach) for approach in neo_data.get('close_approach_data', [])]\n",
-        "    return cls(neo_data['id'], neo_data['name'], close_approaches)\n",
+        "    return cls(\n",
+        "        neo_data['id'],\n",
+        "        neo_data['name'],\n",
+        "        close_approaches\n",
+        "        )\n",
         "\n",
         "  def nearest_miss(self):\n",
         "    return min(self.close_approaches, key = lambda approach: approach.miss_distance)\n",
@@ -734,11 +738,7 @@
         "  def closest_earth_approach(self):\n",
         "    return min(self.close_approaches, key = lambda approach: approach.approach_date)\n",
         "\n",
-        "ca = [Asteroid.from_NEO(neo) for neo in neos]\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "ca = [Asteroid.from_NEO(neo) for neo in neos]\n"
       ],
       "metadata": {
         "ExecuteTime": {
