All exercises completed.

--- a/labs/lab08_GoL.ipynb
+++ b/labs/lab08_GoL.ipynb
@@ -373,8 +373,8 @@
         "#### Ex 1. Your Answers\n",
         "\n",
         "1. . No, because there are MUCH more possible states.  \n",
-        "2. .\n",
-        "3. ."
+        "2. . List every possible 3x3 pattern in order, convert the resulting binary string to a number\n",
+        "3. . Apply Conway's rules to each possible configuration to generate a binary string. Convert that binary string to decimal."
       ],
       "metadata": {
         "collapsed": false,
@@ -405,14 +405,11 @@
         "# Ex. 2 experimental setup\n",
         "\n",
         "class BetterLife2D(Life2D):\n",
-        "    \"\"\" Improvements on the basic Life2D model \"\"\"\n",
         "\n",
         "    def randomize_state(self, p):\n",
-        "        \"\"\" Randomize the state of this GoL, where probability of a \"live\" cell is p \"\"\"\n",
         "        self.state = (np.random.rand(*self.state.shape)<p)\n",
         "\n",
         "    def random_life(n_rows, n_cols=None, p=0.5):\n",
-        "      \"\"\" Return a Life2D object of given dimensions with initial randomized state where \"live\" cells have probability p \"\"\"\n",
         "      model = BetterLife2D(n_rows, n_cols)\n",
         "      model.randomize_state(p)\n",
         "      return model\n",
@@ -7808,11 +7805,11 @@
           "start_time": "2024-01-06T00:59:32.389848Z"
         },
         "id": "kNvtcTxrl5Vm",
-        "outputId": "55aab499-c23d-4d28-f488-90c2f4c52d69",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 696
-        }
+        },
+        "outputId": "55aab499-c23d-4d28-f488-90c2f4c52d69"
       }
     }
   ],
